--- a/src/styles.css
+++ b/src/styles.css
@@ -18,5 +18,5 @@
 }
 
 h1,h2,h3,h3,h5,h6{
-  letter-spacing: 4px;
+  letter-spacing: 3px;
 }
